# travel-agency-multi-agent

./: README.md
dab/: dab-config.json  dab-config.sh
database/: create_database.sql  docker-compose.yml
semantic-kernel/plugins/: dab.yaml
semantic-kernel/prompts/: offering_expert_instructions.txt  travel_agent_instructions.txt  travel_manager_instructions.txt
src/: .gitignore  Directory.Build.props  Directory.Packages.props  TravelAgency.sln
src/TravelAgency.AppHost/: Program.cs  TravelAgency.AppHost.csproj  appsettings.json
src/TravelAgency.AppHost/Properties/: launchSettings.json
src/TravelAgency.OfferingsExpert/: ChatWithDBAgent.cs  Program.cs  TravelAgency.OfferingsExpert.csproj  TravelAgentChat.cs
src/TravelAgency.OfferingsExpert/Converters/: JsonCamelCaseEnumConverter.cs
src/TravelAgency.OfferingsExpert/Models/: AIChatCompletion.cs  AIChatCompletionDelta.cs  AIChatFile.cs  AIChatMessage.cs  AIChatMessageDelta.cs  AIChatRequest.cs  AIChatRole.cs
src/TravelAgency.OfferingsExpert/Properties/: launchSettings.json
src/TravelAgency.ProcessOrchestrator/: OfferingsExpertHttpClient.cs  Program.cs  TravelAgency.ProcessOrchestrator.csproj  TravelAgency.ProcessOrchestrator.http  TripPlannerHttpClient.cs
src/TravelAgency.ProcessOrchestrator/Models/: ProcessEvents.cs
src/TravelAgency.Shared/: OfferingsExpertRequest.cs  PlanTripRequest.cs
src/frontend/: vite.config.ts
src/frontend/src/: App.tsx
src/trip-planner/: .gitignore  pyproject.toml  travel-agency-group-chat.http
src/trip-planner/src/trip_planner/: __init__.py
(+3 files in other folders)
