[project]
name = "trip-planner"
version = "0.1.0"
description = "Travel Agency group chat"
authors = [
    { name = "Tommaso Stocchi", email = "tstocchi@microsoft.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "semantic-kernel>=1.21.3",
    "uvicorn>=0.32.1",
]

[project.scripts]
trip-planner = "trip_planner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
